2004-02-19  David N. Welton  <davidw@dedasys.com>

	* doc/rivet.xml: Added some additional comments regarding the
	installation.  Thanks to Tom Krehbiel for the suggestions.

2004-02-17  David N. Welton  <davidw@dedasys.com>

	* src/make.tcl: Created better dependency system for DocBook docs.

	* doc/html/rivet.*.html: Added non-chunked versions of the docs.

	* doc/rivet-nochunk.xsl: Change include of docbook.xsl to an
	import at the top of the file.  Seems to make things work ok.

2004-02-11  David N. Welton  <davidw@dedasys.com>

	* src/make.tcl: Don't delete rivet packages directory during
	install.  This used to happen in order to keep things clean, but
	people are using this directory for local packages/modifications,
	so this is not a good thing to have.

2004-02-06  David N. Welton  <davidw@dedasys.com>

	* tests/headers.test: Include current version of http package in
	result automatically, so as to avoid having to update it by hand.

	* tests/apachetest/apachetest.tcl (apachetest::getallincludes):
	Create function to fetch a conf file and all the files Included it
	from it.

	* doc/rivet.xml: Add section for session package.

	* doc/rivet.xml: Added SESSION documentation.

	* rivet/packages/session/README.txt: Removed text, indicate
	HTML/XML docs - I don't want to maintain the same docs in two
	places.

	* src/make.tcl: Create directory before installing.

2004-01-20  Karl Lehenbauer  <karl@sc.com>

	* rivet/packages/dio/diodisplay.tcl: Removed calls to abort_page
	when relatively benign conditions like no records matching a
	search occur.  This allows us to emit all the code we need, like
	closing the table (</table>) and emiting our page trailer, etc,
	instead of having the page cut off somewhere in the middle.

2004-01-15  David N. Welton  <davidw@dedasys.com>

	* rivet/rivet-tcl/load_response.tcl (load_response): Fixed a bug
	in load_response that was tickled by calling it multiple times.
	Thanks to Brad for catching it.
