@@ -37,7 +37,7 @@
   </para>
 
   <para>
-    Document reversion: $Revision$, last modified $Date$ by $Author$.
+    Document revision: $Revision$, last modified $Date$ by $Author$.
   </para>
 
   <section>
